--- a/src/PowerCleanCore/PowerCleanCore.csproj
+++ b/src/PowerCleanCore/PowerCleanCore.csproj
@@ -65,6 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
+    <PackageReference Include="Microsoft.VisualStudio.Shell.Interop">
+      <Version>16.7.30328.74</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3069" />
   </ItemGroup>
   <ItemGroup>
