--- a/src/PowerCleanCore/PowerCleanCore.csproj
+++ b/src/PowerCleanCore/PowerCleanCore.csproj
@@ -35,6 +35,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,9 +44,15 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="PowerShellCommand.cs" />
+    <Compile Include="Helpers\ProjectHelpers.cs" />
+    <Compile Include="Interfaces\IStatusBarService.cs" />
+    <Compile Include="Interfaces\IPowerShellService.cs" />
+    <Compile Include="Services\PowerShellService.cs" />
+    <Compile Include="Services\StatusBarService.cs" />
+    <Compile Include="PowerCleanCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PowerCleanCorePackage.cs" />
   </ItemGroup>
@@ -69,6 +76,9 @@
       <Version>16.7.30328.74</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3069" />
+    <PackageReference Include="Serilog">
+      <Version>2.10.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <VSCTCompile Include="PowerCleanCorePackage.vsct">
@@ -76,8 +86,9 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\PowerShellCommand.png" />
+    <Content Include="Resources\PowerCleanCommand.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
