--- a/src/PowerClean/PowerClean.csproj
+++ b/src/PowerClean/PowerClean.csproj
@@ -13,8 +13,8 @@
     <ProjectGuid>{A36D7223-8B5A-4495-B929-F6E97CCA7F27}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PowerCleanCore</RootNamespace>
-    <AssemblyName>PowerCleanCore</AssemblyName>
+    <RootNamespace>PowerClean</RootNamespace>
+    <AssemblyName>PowerClean</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
@@ -54,7 +54,7 @@
     <Compile Include="Services\StatusBarService.cs" />
     <Compile Include="PowerCleanCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PowerCleanCorePackage.cs" />
+    <Compile Include="PowerCleanPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -81,7 +81,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <VSCTCompile Include="PowerCleanCorePackage.vsct">
+    <VSCTCompile Include="PowerCleanPackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
   </ItemGroup>
