--- a/src/PowerClean/PowerClean.csproj
+++ b/src/PowerClean/PowerClean.csproj
@@ -82,6 +82,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop" Version="16.7.30328.74" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3069" />
     <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="System.Management.Automation_PowerShell_3.0" Version="6.3.9600.17400" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
