--- a/src/PowerClean/PowerClean.csproj
+++ b/src/PowerClean/PowerClean.csproj
@@ -42,8 +42,8 @@
     <Compile Include="Helpers\ProjectHelpers.cs" />
     <Compile Include="Interfaces\IStatusBarService.cs" />
     <Compile Include="Interfaces\IPowerShellService.cs" />
-    <Compile Include="NoProjectFoundException.cs" />
-    <Compile Include="NoProjectSelectedException.cs" />
+    <Compile Include="Exceptions\NoProjectFoundException.cs" />
+    <Compile Include="Exceptions\NoProjectSelectedException.cs" />
     <Compile Include="PowerCleanProjectCommand.cs" />
     <Compile Include="Services\PowerShellService.cs" />
     <Compile Include="Services\StatusBarService.cs" />
@@ -82,8 +82,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop" Version="16.7.30328.74" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3069" />
     <PackageReference Include="Serilog" Version="2.10.0" />
-    <PackageReference Include="System.Management.Automation_PowerShell_3.0" Version="6.3.9600.17400" />
+    <PackageReference Include="System.Management.Automation_PowerShell_3.0">
+      <Version>6.3.9600.17400</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
 </Project>
