--- a/src/PowerClean/PowerClean.csproj
+++ b/src/PowerClean/PowerClean.csproj
@@ -58,6 +58,7 @@
     <Compile Include="PowerCleanSolutionCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PowerCleanPackage.cs" />
+    <Compile Include="Sinks\VisualStudioSink.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.TXT">
@@ -94,6 +95,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop" Version="16.7.30328.74" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3069" />
     <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Async">
+      <Version>1.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.EventLog">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Management.Automation_PowerShell_3.0">
       <Version>6.3.9600.17400</Version>
     </PackageReference>
