--- a/src/PowerClean/PowerClean.csproj
+++ b/src/PowerClean/PowerClean.csproj
@@ -40,7 +40,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -52,7 +52,13 @@
     <Compile Include="Interfaces\IPowerShellService.cs" />
     <Compile Include="Exceptions\NoProjectFoundException.cs" />
     <Compile Include="Exceptions\NoProjectSelectedException.cs" />
+    <Compile Include="Helpers\LoggerContextExtension.cs" />
     <Compile Include="PowerCleanProjectCommand.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Services\PowerShellService.cs" />
     <Compile Include="Services\StatusBarService.cs" />
     <Compile Include="PowerCleanSolutionCommand.cs" />
@@ -61,7 +67,7 @@
     <Compile Include="Sinks\VisualStudioSink.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LICENSE.TXT">
+    <Content Include="Resources\LICENSE.TXT">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
@@ -72,6 +78,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Resources\ChangeLog.rtf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <None Include="Resources\ContextNameConstants.MD" />
+    <None Include="Resources\SerilogConfig.json" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -91,21 +103,38 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration">
+      <Version>3.1.8</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions">
+      <Version>3.1.8</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json">
+      <Version>3.1.8</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.PowerShell.5.ReferenceAssemblies">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop" Version="16.7.30328.74" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3069" />
     <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Settings.Configuration">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Serilog.Sinks.Async">
       <Version>1.4.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.EventLog">
       <Version>3.1.0</Version>
     </PackageReference>
-    <PackageReference Include="System.Management.Automation_PowerShell_3.0">
-      <Version>6.3.9600.17400</Version>
-    </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
 </Project>
